--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -34,19 +34,31 @@
 </p>
 
 <p>
-    Aquí no voy a contar mucho sobre mi. Solo voy a comentar la anodina historia sobre dónde surgió el seudónimo <em>Inoro</em>.
+    Aquí no voy a contar mucho sobre mi. Solo voy a comentar la anodina 
+    historia sobre dónde surgió el seudónimo <em>Inoro</em>.
 </p>
 
 <p>
-    &laquo;Había una vez un tabernero que tenía muy mala memoria (casi tan mala memoria como yo) y, como toda persona normal que llevase un negocio, el apuntaba en una libreta los nombres de las personas que le debían dinero, junto a la cantidad adeudada.
+    &laquo;Había una vez un tabernero que tenía muy mala memoria (casi tan 
+    mala memoria como yo) y, como toda persona normal que llevase un negocio, 
+    el apuntaba en una libreta los nombres de las personas que le debían 
+    dinero, junto a la cantidad adeudada.
 </p>
 
 <p>
-    Pero resulta que algunas veces, como toda persona olvidadiza, solo se acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. Por lo que el tabernero apuntaba el nombre seguido de la palabra <em>inoro</em>. De esta forma sabía que Fulanito le debía algo y, aunque sea una información sesgada, el confiaba en la honestidad de las buenas personas, a las que podría preguntarles si se acordaban de cuanto le debían.&raquo;
+    Pero resulta que algunas veces, como toda persona olvidadiza, solo se 
+    acordaba del nombre del sujeto que le debía dinero, y no de la cantidad. 
+    Por lo que el tabernero apuntaba el nombre seguido de la palabra 
+    <em>inoro</em>. De esta forma sabía que Fulanito le debía algo y, aunque 
+    sea una información sesgada, el confiaba en la honestidad de las buenas 
+    personas, a las que podría preguntarles si se acordaban de cuanto le 
+    debían.&raquo;
 </p>
 
 <p>
-    Y eso es todo ¿una historia anodina verdad? Pero no importa, lo interesante es que recordé esta historia justo en el momento preciso en el que decidí cambiar de seudónimo en internet.
+    Y eso es todo ¿una historia anodina verdad? Pero no importa, lo 
+    interesante es que recordé esta historia justo en el momento preciso en 
+    el que decidí cambiar de seudónimo en internet.
 </p>
 
 <p>
