--- a/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
+++ b/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
@@ -2,7 +2,8 @@
 <h1>La forma más rápida de hacer <samp>git push</samp></h1>
 
 <p>
-    Estos tres comandos, que se deben copiar y pegar en bloque, son la forma mas sencilla para subir tus cambios de un repositorio a la nube.
+    Estos tres comandos, que se deben copiar y pegar en bloque, son la forma 
+    más sencilla para subir tus cambios de un repositorio a la nube.
 </p>
 
 <h2>Requisitos previos a la ejecución</h2>
@@ -12,14 +13,21 @@
     <li>Situar la terminal en la carpeta raíz del repositorio (la primera).</li>
 </ul>
 
-<p>Para configurar el usuario y el correo electrónico se deben ejecutar los siguientes comandos:</p>
+<p>
+    Para configurar el usuario y el correo electrónico se deben ejecutar los 
+    siguientes comandos:
+</p>
 
 <pre>
 git config --global user.name "nombre"
 git config --global user.email "email@example.com"
 </pre>
 
-<p>Una vez se hayan cumplido los requisitos previos, solo hay que copiar <strong>todos</strong> los comandos que vienen a continuación y los pegamos en la terminal.</p>
+<p>
+    Una vez se hayan cumplido los requisitos previos, solo hay que copiar 
+    <strong>todos</strong> los comandos que vienen a continuación y los 
+    pegamos en la terminal.
+</p>
 
 <pre>
 git add . \
@@ -28,5 +36,8 @@ git push
 </pre>
 
 <blockquote>
-    Si tenemos configurado el <em>GIT</em> por <em>SSH</em> no hace falta que pongáis la contraseña, pero si lo tenéis por <em>HTTPS</em>, os solicitará el nombre de usuario y la contraseña de <em>GitHub</em>, <em>GitLab</em>, etc.
+    Si tenemos configurado el <em>GIT</em> por <em>SSH</em> no hace falta que 
+    pongáis la contraseña, pero si lo tenéis por <em>HTTPS</em>, os solicitará 
+    el nombre de usuario y la contraseña de <em>GitHub</em>, 
+    <em>GitLab</em>, etc.
 </blockquote>
