--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -2,8 +2,8 @@
 <h1>Software que utilizo habitualmente</h1>
 
 <p>
-    Escribo esto a modo de reflexión sobre que programas realmente utilizo, 
-    cuales me hacen ser más productivo en mi día a día, y si debería obviar 
+    Escribo esto a modo de reflexión sobre que programas realmente utilizo,
+    cuales me hacen ser más productivo en mi día a día, y si debería obviar
     alguno en futuras instalaciones.
 </p>
 
@@ -13,20 +13,20 @@
 
 <ul>
     <li>
-        <a href="https://archlinux.org/download/"><strong>Arch Linux</strong></a> es mi 
+        <a href="https://archlinux.org/download/"><strong>Arch Linux</strong></a> es mi
         distribución principal actualmente en mi PC y portátil.
     </li>
     <li>
-        <a href="https://www.debian.org/index.es.html"><strong>Debian</strong></a> lo 
-        utilizo en mis servidores, en mi opinión es la mejor opción para un 
+        <a href="https://www.debian.org/index.es.html"><strong>Debian</strong></a> lo
+        utilizo en mis servidores, en mi opinión es la mejor opción para un
         servidor.
     </li>
     <li>
-        <a href="https://ubuntu.com/download/server"><strong>Ubuntu Server LTS</strong></a> 
-        lo utilizo también en mis servidores cuando considero que Debian se 
-        queda un poco anticuado, o si voy a probar una aplicación que está mas 
-        orientada a esta distribución. No suelo tener muchas instalaciones con 
-        este SO, porque muchas veces solo tengo que esperar a la siguiente 
+        <a href="https://ubuntu.com/download/server"><strong>Ubuntu Server LTS</strong></a>
+        lo utilizo también en mis servidores cuando considero que Debian se
+        queda un poco anticuado, o si voy a probar una aplicación que está más
+        orientada a esta distribución. No suelo tener muchas instalaciones con
+        este SO, porque muchas veces solo tengo que esperar a la siguiente
         versión de Debian.
     </li>
 </ul>
@@ -34,83 +34,90 @@
 <h3>Window Manager/Desktop Environment</h3>
 
 <p>
-    <strong>gnome-shell</strong> es el entorno de escritorio que mas me gusta 
-    y estoy muy acostumbrado a su <em>workflow</em> (sobre todo en la versión 
-    40). De todas formas estoy muy interesado en probar un <em>tiling window 
-    manager</em> estilo <strong>dwm</strong> o <strong>i3</strong> en el que 
+    <strong>gnome-shell</strong> es el entorno de escritorio que más me gusta
+    y estoy muy acostumbrado a su <em>workflow</em> (sobre todo en la versión
+    40). De todas formas estoy muy interesado en probar un <em>tiling window
+    manager</em> estilo <strong>dwm</strong> o <strong>i3</strong> en el que
     sea capaz de recordar todos sus comandos.
 </p>
 
 <h3>Terminal</h3>
 
 <p>
-    <strong>gnome-terminal</strong>, la uso porque es la que viene por defecto con 
-    <strong>gnome-shell</strong> pero puede que cambie en algún momento. Busco algo 
-    mas simple, como <strong>st</strong> (simple terminal) de 
-    <a href="https://st.suckless.org/">suckless.org</a>, pero aún debería 
-    probarla por algún tiempo mas para decidirme.
+    <strong>gnome-terminal</strong>, la uso porque es la que viene por defecto
+    con <strong>gnome-shell</strong> pero puede que cambie en algún momento.
+    Busco algo más simple, como <strong>st</strong> (simple terminal) de
+    <a href="https://st.suckless.org/">suckless.org</a>, pero aún debería
+    probarla por algún tiempo más para decidirme.
 </p>
 
 <h3>Shell</h3>
 
 <p>
-    <strong>bash</strong>, soy una persona a la que le gusta el default, por lo que 
-    aún no veo necesario mudarme a <strong>zsh</strong>, a pesar de que promete mucha 
-    mas flexibilidad.
+    <strong>bash</strong>, soy una persona a la que le gusta el default, por
+    lo que aún no veo necesario mudarme a <strong>zsh</strong>, a pesar de
+    que promete mucha más flexibilidad.
 </p>
 
 <h3>Editores de texto y entornos de programación</h3>
 
 <p>
-    Esta sección no solo es confusa, sinó que en realidad yo me encuentro muy 
-    confuso al respecto. Sigo buscando el editor de texto definitivo, he 
-    probado muchos, pero no paro de cambiar. Me gustaría proba <strong>vim</strong> pero 
-    creo que aún no estoy preparado.
+    Esta sección no solo es confusa, sinó que en realidad yo me encuentro muy
+    confuso al respecto. Sigo buscando el editor de texto definitivo, he
+    probado muchos, pero no dejo de cambiar. Me gustaría proba
+    <strong>vim</strong> pero creo que aún no estoy preparado.
 </p>
 
 <ul>
     <li>
-        <strong>Visual Studio Code</strong> es actualmente mi entorno de desarrollo por 
-        defecto. Es rápido y muy extensible gracias a todos los plugins que se 
-        le pueden instalar. Empezé usando <strong>atom</strong> pero acabé canasdome de lo mal que funciona su cliente de <strong>git</strong>
+        <strong>Vim</strong>, resulta que actualmente estoy intentando
+        utilizarlo como único editor de texto para todo mi <em>workflow</em>,
+        que últimamente se traduce en <em>Markdown</em>, <em>BASH</em>,
+        <em>Docker</em>, <em>YAML</em> y algún que otro texto plano.
     </li>
     <li>
-        <strong>geany</strong> para editar texto plano sin necesidad de plugins. Aunque cada vez lo uso menos, y para una función tan simple como esta acabo usando <strong>nano</strong>.
+        <strong>Visual Studio Code</strong> era, hasta hace poco tiempo, mi
+        entorno de desarrollo por defecto. Es rápido y muy extensible gracias
+        a todos los plugins que se le pueden instalar. Empecé usando
+        <strong>atom</strong> pero acabé cansándome de lo mal que funciona su
+        cliente de <strong>git</strong>. A pesar de todo, hoy en día utilizo
+        más <strong>git</strong> desde la terminal que desde <em>GUI</em>.
     </li>
 </ul>
 
 <h3>Navegador web</h3>
 
 <p>
-    Esto es un tema complicado. Como persona que programa páginas web de vez en cuando, normalmente 
-    tengo <strong>Chromium</strong> y <strong>Firefox</strong> instalados, para 
-    poder ver las dos caras de la moneda.
+    Esto es un tema complicado. Como persona que programa páginas web de vez
+    en cuando, normalmente tengo <strong>Chromium</strong> y
+    <strong>Firefox</strong> instalados, para poder ver las dos caras de la
+    moneda.
 </p>
 
 <p>
-    Creo que la mejor opción actualmente es <strong>Firefox</strong> en 
-    conjunto con las extensiones 
-    <a href="https://github.com/gorhill/uBlock">uBlock Origin</a>, 
+    Creo que la mejor opción actualmente es <strong>Firefox</strong> en
+    conjunto con las extensiones
+    <a href="https://github.com/gorhill/uBlock">uBlock Origin</a>,
     <a href="https://www.eff.org/es/https-everywhere">HTTPS Everywhere</a> y
-    <a href="https://addons.mozilla.org/es/firefox/addon/strict-pop-up-blocker/">Strict Pop-up Blocker</a>. 
-    Es cierto que en estos días parece que no es tán rápido como 
-    <strong>Chrome</strong> y derivados, pero ya sabemos que estas estadísticas 
-    suelen variar mucho en cada versíon nueva que sale. Además usar 
-    <strong>Firefox</strong>, en mi caso, es mas una elección que yo hago 
+    <a href="https://addons.mozilla.org/es/firefox/addon/strict-pop-up-blocker/">Strict Pop-up Blocker</a>.
+    Es cierto que en estos días parece que no es tan rápido como
+    <strong>Chrome</strong> y derivados, pero ya sabemos que dichas estadísticas
+    suelen variar mucho en cada versión nueva que sale. Además usar
+    <strong>Firefox</strong>, en mi caso, es más una elección que yo hago
     poniendo la privacidad por delante de la velocidad de navegación.
 </p>
 
 <p>
-    A pesar de todo, he de confesar que, a raíz del dilema privacidad vs 
-    velocidad de navegación, he empezado a probar el navegador 
-    <a href="https://brave.com/es/">Brave</a> (sin ninguna extensión) como 
-    navegador principal, en mi movil primero, puesto que 
-    <strong>Firefox</strong> (a pesar de tener un diseño excelente) es cada 
-    día mas lento, y posteriormente en mi PC, donde más tiempo paso tódos los 
-    días. Aún no puedo sacar ninguna conclusión definitiva de esta experiencia, 
-    y sigo estando a favor de <strong>Firefox</strong>. Sin embargo, si consigo 
-    pasar un par de meses utilizando <strong>Brave</strong> y no encuentro 
-    ningún impedimento puede que termine mudándome. En tal caso supongo que lo 
+    A pesar de todo, he de confesar que, a raíz del dilema privacidad vs
+    velocidad de navegación, he empezado a probar el navegador
+    <a href="https://brave.com/es/">Brave</a> (sin ninguna extensión) como
+    navegador principal, en mi movil primero, puesto que
+    <strong>Firefox</strong> (a pesar de tener un diseño excelente) es cada
+    día más lento, y posteriormente en mi PC, donde más tiempo paso todos los
+    días. Aún no puedo sacar ninguna conclusión definitiva de esta experiencia,
+    y sigo estando a favor de <strong>Firefox</strong>. Sin embargo, si consigo
+    pasar un par de meses utilizando <strong>Brave</strong> y no encuentro
+    ningún impedimento puede que termine mudándome. En tal caso supongo que lo
     anunciaré en un futuro artículo.
 </p>
 
@@ -119,11 +126,11 @@
 <h3>Mensajería instantánea</h3>
 
 <p>
-    <strong>Telegram</strong> y <strong>Signal</strong>, se que 
-    <strong>Telegram</strong> no es tan seguro como <strong>Signal</strong> y 
-    que tiene un montón de carencias a nivel de seguridad. Pero ya me ha 
-    costado demasiado mover a todo mi círculo desde <strong>WhatsApp</strong> 
-    hasta <strong>Telegram</strong> como para ahora decirles que tienen que 
-    usar Signal para hablar conmigo. De todas formas, actualmente, ya lo 
+    <strong>Telegram</strong> y <strong>Signal</strong>, se que
+    <strong>Telegram</strong> no es tan seguro como <strong>Signal</strong> y
+    que tiene un montón de carencias a nivel de seguridad. Pero ya me ha
+    costado demasiado mover a todo mi círculo desde <strong>WhatsApp</strong>
+    hasta <strong>Telegram</strong> como para ahora decirles que tienen que
+    usar Signal para hablar conmigo. De todas formas, actualmente, ya lo
     lo estoy intentando a paulatinamente.
 </p>
