--- a/public/pages/yojimbo-japon-inspira-western.html
+++ b/public/pages/yojimbo-japon-inspira-western.html
@@ -20,7 +20,7 @@
     Posiblemente el germen que dió lugar al <em>spaghetti western</em> debido 
     a que Sergio Leone, precursor del género, plagió el argumento de esta 
     película (cambiando la ambientación) en 
-    <strong>Por un puñado de dólares</strong> (1964). El alegó que lo haciá a 
+    <strong>Por un puñado de dólares</strong> (1964). El alegó que lo hacía a 
     modo de homenaje a Akira Kurosawa, al cuál admiraba mucho, pero el juez 
     dictaminó que no cumplió con el <em>copyright</em> y eso le costó los 
     derechos de distribución en parte de ásia y el 15% de los beneficios de 
@@ -32,8 +32,8 @@
     En mi opinión, todas las versiones de este argumento son de mi agrado y 
     devoción, pero esta destaca por más motivos que la anécdota. Me encanta 
     la fotografía, y, a pesar de no tener ni idea de imagen o color, creo que 
-    este blanco y negro tienen algo especial (si alguien sabe lo que es que me lo cuente). 
-    También soy muy fan de Toshiro Mifune, y su forma de actuar me 
+    este blanco y negro tienen algo especial (si alguien sabe lo que es que me 
+    lo cuente). También soy muy fan de Toshiro Mifune, y su forma de actuar me 
     fascina. Creo que en esta película es una de estas donde se ve al actor en 
     su rol mas icónico, haciendo de samurái solitario, justiciero y 
     carismático. Una de esas imágenes que quedarán para siempre grabadas en la 
