cambio del texto de los alt= de las imagenes

--- a/public/pages/haxan-brujeria-a-traves-del-tiempo.html
+++ b/public/pages/haxan-brujeria-a-traves-del-tiempo.html
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-    <img src="img/20210727/haxan-750.jpg" alt="Escena de un pasaje de la película.">
+    <img src="img/20210727/haxan-750.jpg" alt="Recreación de una ensoñación en un pasaje del film.">
 </p>
 
 <p>
