--- a/public/pages/yojimbo-japon-inspira-western.html
+++ b/public/pages/yojimbo-japon-inspira-western.html
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-    <img src="img/20210724/yojimbo-750.jpg" alt="Ikio Sawamura y Toshiro Mifune en una de las escenas iniciales del film.">
+    <img src="img/20210724/yojimbo-750.jpg" alt="Ikio Sawamura y Toshiro Mifune.">
 </p>
 
 <p>
