mejorando la página del 404 con un ejemplo de yotsuba y demas

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -12,7 +12,7 @@
 </style>
 
 <p>
-    <img src="img/inoro.webp" alt="Avatar de Inoro" class="half">
+    <img src="img/inoro.webp" alt="Inoro pixel" class="half">
     <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
