actualizado el lector de RSS en el FAQ

--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -80,8 +80,9 @@ Preguntas que yo ya sé que vas a hacer.
 <blockquote>
     Yo, personalmente uso 
     <a href="https://github.com/martinrotter/rssguard">RSS Guard</a> en mi PC y 
-    <a href="https://github.com/joshuacerdenia/NiceFeed">NiceFeed</a> en el 
-    movil, por si no tenéis ni idea del tema y queréis tener una solución 
+    <a href="https://gitlab.com/spacecowboy/Feeder">Feeder</a> o 
+    <a href="https://github.com/joshuacerdenia/NiceFeed">NiceFeed</a> en Android, 
+    por si no tenéis ni idea del tema y queréis tener una solución 
     <strong>yá</strong>.
 </blockquote>
 
