mejoradas las paletas de colores && optimiza la imagen de 404

--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -2,15 +2,23 @@
 <h1>Selector de color</h1>
 
 <p>
-    Selecciona la paleta de colores en la que quieres ver la página.
+    ¡Reivindiquemos nuestro derecho como informáticos a tener una buena vista después de 20 años delante de una pantalla!
 </p>
 
+<p>
+    Selecciona en la lista que paleta de colores quieres aplicar a la página. Tu preferencia se guardará en la cookie llamada <code>COOKIE_ID</code> por 30 días.
+</p>
+
+<!-- ☀/☼ 🌆/🌇/🌃 🌞/🌑/🌚 🌄/🌅/🌌 -->
 <ul>
-    <li><a href="index.php?page=color.html&id=0">Grey&White</a> - Paleta por <strong>defecto</strong>, extremadamente minimalista.</li>
-    <li><a href="index.php?page=color.html&id=1">Melocotón</a> - Antigua paleta por <strong>defecto</strong>, basada en el color melocotón (<samp>#EDD1B0</samp>) para facilitar la lectura.</li>
-    <li><a href="index.php?page=color.html&id=2">Modo oscuro</a> - Alto contraste.</li>
-    <li><a href="index.php?page=color.html&id=3">Auto</a> - Colores por defecto del navegador.</li>
-    <li><a href="index.php?page=color.html&id=4">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esa</a> web.</li>
-    <li><a href="index.php?page=color.html&id=5">GitHub Dark dimmed</a> - Por ahora, mi paleta de colores preferida de GitHub.</li>
-    <li><a href="index.php?page=color.html&id=6">Black&White</a> - Solo dos colores, exceptuando enlaces.</li>
+    <li>🌄 <a href="index.php?page=color.html&id=0">Grey&White</a> - Paleta por <strong>defecto</strong>, extremadamente minimalista.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=9">Gruvbox Dark</a> - La paleta de colores utilizada por todo <em>Vim lover</em>.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=8">Nord Dark</a> - Inspirada por las frias tonalidades invernales.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=7">Dracula</a> - La popular paleta de colores diseñada por <a href="https://zenorocha.com/">Zeno Rocha</a>.</li>
+    <li>🌄 <a href="index.php?page=color.html&id=1">Melocotón</a> - Basada en el color melocotón para facilitar la lectura.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=5">GitHub Dark dimmed</a> - Por ahora, mi paleta de colores preferida de GitHub.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=4">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esta</a> web.</li>
+    <li>🌄 <a href="index.php?page=color.html&id=6">Black&White</a> - Solo dos colores, exceptuando enlaces.</li>
+    <li>🌌 <a href="index.php?page=color.html&id=2">Modo oscuro</a> - Paleta personal con alto contraste.</li>
+    <li>🌄 <a href="index.php?page=color.html&id=3">Auto</a> - Colores por defecto del navegador.</li>
 </ul>
