refactor(page): :art: cambio de imagen de perfil de inoro

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -12,16 +12,7 @@
 </style>
 
 <p>
-    <img src="img/inoro.webp" alt="Inoro pixel" class="half">
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org/",
-            "@type": "ImageObject",
-            "contentUrl": "https://record.rat.la/img/inoro.webp",
-            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-            "acquireLicensePage": "https://record.rat.la/index.php?page=faq.html"
-        }
-    </script>
+    <img style="border-radius: 50%;" src="img/profile.webp" alt="Inoro profile" class="half">
 </p>
 
 <p>
