chore(page): :memo: mejorada redacción sobre rss

--- a/public/pages/faq.html
+++ b/public/pages/faq.html
@@ -78,12 +78,14 @@ Preguntas que yo ya sé que vas a hacer.
 </p>
 
 <blockquote>
-    Yo, personalmente uso 
-    <a href="https://github.com/martinrotter/rssguard">RSS Guard</a> en mi PC y 
+    Personalmente recomiendo 
+    <a href="https://miniflux.app/">Miniflux</a> como opción 
+    <em>self-hosted</em> 👌 para todo tipo de dispositivos,
+    <a href="https://github.com/martinrotter/rssguard">RSS Guard</a> para PC y 
     <a href="https://gitlab.com/spacecowboy/Feeder">Feeder</a> o 
-    <a href="https://github.com/joshuacerdenia/NiceFeed">NiceFeed</a> en Android, 
-    por si no tenéis ni idea del tema y queréis tener una solución 
-    <strong>yá</strong>.
+    <a href="https://github.com/joshuacerdenia/NiceFeed">NiceFeed</a> para 
+    Android. Por si no tenéis ni idea del tema y no quereis perder tiempo <em>googleando</em> 
+    😉.
 </blockquote>
 
 <h2>¿Qué software utilizas?</h2>
