chore(page): :memo: mejorada la redacción

--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -20,8 +20,8 @@
     <em>software</em> libre, que tuvo la idea de crear un blog/web personal con 
     el afán de tener un lugar donde escribir y trastear con tecnologías web. 
     Por el momento, soy el único administrador de este sítio y asimismo 
-    único creador de contenido, a pesar de haber implementado un sencillo 
-    (pero efectivo) sistema de usuarios 😓.
+    único creador de contenido —a pesar de haber implementado un sencillo 
+    —pero efectivo— sistema de usuarios 😓—.
 </p>
 
 <p>
@@ -30,8 +30,8 @@
 </p>
 
 <p>
-    &laquo;Había una vez un tabernero que tenía muy mala memoria (casi tan 
-    mala memoria como yo) y, como toda persona normal que llevase un negocio, 
+    &laquo;Había una vez un tabernero que tenía muy mala memoria —casi tan 
+    mala memoria como yo— y, como toda persona normal que llevase un negocio, 
     el apuntaba en una libreta los nombres de las personas que le debían 
     dinero, junto a la cantidad adeudada.
 </p>
@@ -53,9 +53,9 @@
 </p>
 
 <p>
-    Mis cuentas de <strong>GitHub</strong>, <strong>GitLab</strong>, 
-    <strong>Twitter</strong> y mi <strong>correo de contacto</strong> están 
-    en el <a href="#footer">footer</a> de la página (por si no los habías 
-    visto). Si quieres preguntarme cualquier cosa más no dudes en escribirme. 
+    Mis cuentas de <strong>GitHub</strong>, <strong>GitLab</strong> y mi 
+    <strong>correo de contacto</strong> están en el 
+    <a href="#footer">footer</a> de la página —por si no los habías visto—. 
+    Si quieres preguntarme cualquier cosa más no dudes en escribirme. 
     Suelo responder los <em>e-mails</em>, sobre todo.
 </p>
