refactor(page): :recycle: new e-mail

--- a/public/pages/ubiquiti-er-movistartv.html
+++ b/public/pages/ubiquiti-er-movistartv.html
@@ -11,7 +11,7 @@
     <p>HGU = Router de Movistar, ER = EdgeRouter.</p>
 </blockquote>
 
-<h2>Si pruebas esta configuración y tienes fallos, agrega un nuevo issue a <a href="https://github.com/1noro/ubiquiti-er-movistartv">mi repositorio</a>, o <a href="mailto:ppuubblliicc@protonmail.com">contáctame</a>.</h2>
+<h2>Si pruebas esta configuración y tienes fallos, agrega un nuevo issue a <a href="https://github.com/1noro/ubiquiti-er-movistartv">mi repositorio</a>, o <a href="mailto:1noro@record.rat.la">contáctame</a>.</h2>
 
 <h2>Escenario</h2>
 
@@ -121,4 +121,4 @@ show ip multicast interfaces
     <li><a href="https://comunidad.movistar.es/t5/Soporte-Fibra-y-ADSL/configuracion-del-router-ax-11000-asus-por-conexion-pppoe-ONT/m-p/4217145#M427122">https://comunidad.movistar.es/t5/Soporte-Fibra-y-ADSL/configuracion-del-router-ax-11000-asus-por-conexion-pppoe-ONT/m-p/4217145#M427122</a></li>
 </ul>
 
-<h2>Si pruebas esta configuración y tienes fallos, agrega un nuevo issue a <a href="https://github.com/1noro/ubiquiti-er-movistartv">mi repositorio</a>, o <a href="mailto:ppuubblliicc@protonmail.com">contáctame</a>.</h2>
+<h2>Si pruebas esta configuración y tienes fallos, agrega un nuevo issue a <a href="https://github.com/1noro/ubiquiti-er-movistartv">mi repositorio</a>, o <a href="mailto:1noro@record.rat.la">contáctame</a>.</h2>
