doc: actualizada la explicación de las cookies

--- a/public/pages/cookie.html
+++ b/public/pages/cookie.html
@@ -28,11 +28,15 @@
 </p>
 
 <p>
-    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <em>cookie</em> que guardo en tu ordenador es un número que me indica que paleta de colores quieres usar para leer mis artículos. El 0 me dice que quieres la paleta por defecto, el 1 que eres un darks (o un receloso de tu batería) y te gusta leer todo en negro, el 3 que eres un soso y solo quieres los colores como manda el navegador, etc.
+    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <em>cookie</em> que guardo en tu ordenador es un número que me indica que paleta de colores quieres usar para leer mis artículos. El 0 me dice que quieres la paleta por defecto, el 2 que eres un darks (o un receloso de tu batería) y te gusta leer todo en negro, el 3 que eres un soso y solo quieres los colores como manda el navegador, etc.
 </p>
 
 <p>
-    Y por mi parte, si eres de esos paranoicos de la privacidad (como yo), que piensan que las <em>cookies</em> son el demonio, y haces que tu navegador las borre cada 30 segundos, por mi perfecto, no hay ningún problema. Pero solo vas a poder leer la página con los colores por defecto.
+    Una cosa de la que no estoy muy orgulloso es de haber activado Google Analytics en esta web, lo cual genera 3 cookies que hacen que Google recuerde quien eres y a mi me muestre unos gráficos muy chulos sobre quién eres y que lees. Esta decisión la tomé porque me gustaría aprender a utilizar esa funcionalidad y experimentar con ella. Si crees que soy malo y estoy atentando contra tus derechos fundamentales, por favor, házmelo saber.
+</p>
+
+<p>
+    Por lo que a mi respecta, si eres de esos paranoicos de la privacidad (como yo), que piensan que las <em>cookies</em> son el demonio, y haces que tu navegador las borre cada 30 segundos, por mi perfecto, no hay ningún problema. El único inconveniente que te vas a encontrar es que solo vas a poder leer la página con los colores por defecto. Yo soy el primero que no queda registrado en el panel de Google por tener las opciones de privacidad al máximo en el navegador. ¿Hipócrita, verdad 😛?
 </p>
 
 <p>
