feat: nuevo color agregado
Melocotón 2, electric boogaloo

--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -16,6 +16,7 @@
     <li>🌌 <a href="index.php?page=color.html&id=8">Nord Dark</a> - Inspirada por las frias tonalidades invernales.</li>
     <li>🌌 <a href="index.php?page=color.html&id=7">Dracula</a> - La popular paleta de colores diseñada por <a href="https://zenorocha.com/">Zeno Rocha</a>.</li>
     <li>🌄 <a href="index.php?page=color.html&id=1">Melocotón</a> - Basada en el color melocotón para facilitar la lectura.</li>
+    <li>🌄 <a href="index.php?page=color.html&id=10">Melocotón 2, electric boogaloo</a> - Nuevo intento de mejorar la lectura y evitar el cansancio a la hora de leer.</li>
     <li>🌌 <a href="index.php?page=color.html&id=5">GitHub Dark dimmed</a> - Por ahora, mi paleta de colores preferida de GitHub.</li>
     <li>🌌 <a href="index.php?page=color.html&id=4">N-O-D-E</a> - Soy muy fan de <a href="https://n-o-d-e.net">esta</a> web.</li>
     <li>🌄 <a href="index.php?page=color.html&id=6">Black&White</a> - Solo dos colores, exceptuando enlaces.</li>
