--- a/public/pages/emocionado-link-blog.html
+++ b/public/pages/emocionado-link-blog.html
@@ -30,5 +30,5 @@
 </p>
 
 <blockquote>
-    P.D. –Poco se comenta que la web de Jason F. McBrayer y esta tienen ambas la misma temática, y no me refiero a la temática tecnológica, sino a la ambientación <em>Lovecraftiana</em> 🐙 que envuelve a ambas–
+    P.D. –Poco se comenta que la web de Jason F. McBrayer y esta tienen ambas la misma temática, y no me refiero a la temática tecnológica, sino a la ambientación <em>Lovecraftiana</em> 🐙 que envuelve a ambas–jujuju
 </blockquote>
