fix: faltaban links en el último post

--- a/public/pages/emocionado-link-blog.html
+++ b/public/pages/emocionado-link-blog.html
@@ -6,11 +6,11 @@
 </p>
 
 <p>
-    El miércoles, a raíz de la compra de Twitter por parte de Elon Musk, estuve leyendo sobre la desbandada de pajarillos que han huido despavoridos buscando un nuevo nido. Y esto me llevó a <a href="">Mastodon</a>, una red social al estilo Twitter pero descentralizada y construida sobre software libre. Yo ya conocía este proyecto, pero nunca me había atrevido a dar el paso de registrarme. Pero esta vez es diferente, esta vez estaba lo suficientemente desocupado como para darle una oportunidad.
+    El miércoles, a raíz de la compra de Twitter por parte de Elon Musk, estuve leyendo sobre la desbandada de pajarillos que han huido despavoridos buscando un nuevo nido. Y esto me llevó a <a href="https://joinmastodon.org/es">Mastodon</a>, una red social al estilo Twitter pero descentralizada y construida sobre software libre. Yo ya conocía este proyecto, pero nunca me había atrevido a dar el paso de registrarme. Pero esta vez es diferente, esta vez estaba lo suficientemente desocupado como para darle una oportunidad.
 </p>
 
 <p>
-    Empecé por crearme una cuenta en el servidor <a href="https://tilde.zone">tilde.zone</a> y esto me abrió la puerta a un montón de conocimiento nuevo que me ha tenido entretenido por un par de días. He caído en las fauces del <em>small internet</em> (me he defraudado a mi mismo por no haberlo conocido antes) y he descubierto lo que es <a href="">Gemini</a> y <a href="">Gopher</a>, he investigado un poco y ya estoy deseoso de crearme mi propia <em>Gemini capsule</em> en mi servidor. Me descargué un par de clientes de Gemini (<a href="https://ranfdev.com/projects/geopard/">geopard</a> y <a href="https://git.sr.ht/~julienxx/asuka">asuka</a>) y estuve dando una vuelta de reconocimiento por la zona.
+    Empecé por crearme una cuenta en el servidor <a href="https://tilde.zone">tilde.zone</a> y esto me abrió la puerta a un montón de conocimiento nuevo que me ha tenido entretenido por un par de días. He caído en las fauces del <em>small internet</em> (me he defraudado a mi mismo por no haberlo conocido antes) y he descubierto lo que es <a href="https://en.wikipedia.org/wiki/Gemini_(protocol)">Gemini</a> y <a href="https://en.wikipedia.org/wiki/Gopher_(protocol)">Gopher</a>, he investigado un poco y ya estoy deseoso de crearme mi propia <em>Gemini capsule</em> en mi servidor. Me descargué un par de clientes de Gemini (<a href="https://ranfdev.com/projects/geopard/">geopard</a> y <a href="https://git.sr.ht/~julienxx/asuka">asuka</a>) y estuve dando una vuelta de reconocimiento por la zona.
 </p>
 
 <p>
