fix: deshaciendo cambios del test

--- a/public/pages/emocionado-link-blog.html
+++ b/public/pages/emocionado-link-blog.html
@@ -1,5 +1,5 @@
 <!-- 202211122111i -->
-<h1>Emocionado por crear un <em>link blog</em>...</h1>
+<h1>Emocionado por crear un <em>link blog</em></h1>
 
 <p>
     Últimamente sentía cierta presión porque tenía muchas ganas de retomar el blog pero no sabía con qué. Sin dar nunca este sitio por muerto, sentía que la cosa no avanzaba al ritmo que me gustaría. Ando bastante atareado (más bien, muy metido en la rutina) y tengo poco tiempo para pararme un rato y prensar. Pero creo que he encontrado algo que saciará, al menos en principio, mi sed de publicaciones.
