--- a/public/pages/configurando-nginx-para-esta-web.html
+++ b/public/pages/configurando-nginx-para-esta-web.html
@@ -328,3 +328,4 @@ systemctl reload nginx
     <li><a href="https://www.howtoforge.com/make-browsers-cache-static-files-on-nginx">Make Browsers Cache Static Files On nginx</a></li>
     <li><a href="https://www.cyberciti.biz/faq/nginx-set-http-content-type-response-header-to-charset-utf8/">How do I enable charset HTTP-header in Nginx?</a></li>
 </ul>
+<!-- publication_datetime 20200919T0140 -->
