--- a/public/pages/donaciones.html
+++ b/public/pages/donaciones.html
@@ -18,3 +18,5 @@
     <a href="https://brave.com/es/brave-rewards/">Barve Rewards</a>, este es 
     un sítio verificado.
 </p>
+
+<!-- publication_datetime 20200918T0004 -->
