--- a/public/pages/drivers-nvidia-arch-linux.html
+++ b/public/pages/drivers-nvidia-arch-linux.html
@@ -182,3 +182,5 @@ sudo grub-mkconfig -o /boot/grub/grub.cfg
     configuración. Recuerda cambiar el cable de la pantalla y conectarlo a la 
     gráfica.
 </p>
+
+<!-- publication_datetime 20210329T2256 -->
