--- a/public/pages/genesis.html
+++ b/public/pages/genesis.html
@@ -117,3 +117,5 @@ pre, code {
     <li><a href="https://ux.stackexchange.com/questions/551/white-text-on-black-background">White text on black background</a></li>
     <li><a href="https://www.hostinger.com/tutorials/best-html-web-fonts">The 20 Best HTML Web Fonts To Use In 2020</a></li>
 </ul>
+
+<!-- publication_datetime 20200918T1457 -->
