--- a/public/pages/habilitar-http2-nginx.html
+++ b/public/pages/habilitar-http2-nginx.html
@@ -89,3 +89,5 @@ pragma: no-cache
 <ul>
     <li><a href="https://www.digitalocean.com/community/tutorials/how-to-set-up-nginx-with-http-2-support-on-ubuntu-18-04">How To Set Up Nginx with HTTP/2 Support on Ubuntu 18.04</a></li>
 </ul>
+
+<!-- publication_datetime 20200927T1330 -->
