--- a/public/pages/haxan-brujeria-a-traves-del-tiempo.html
+++ b/public/pages/haxan-brujeria-a-traves-del-tiempo.html
@@ -32,3 +32,5 @@
     gusta el cine raro y experimental, o los cuentos de terror al estilo de 
     <em>Lovecraft</em> o <em>Poe</em>.
 </p>
+
+<!-- publication_datetime 20210727T1902 -->
