--- a/public/pages/inoro.html
+++ b/public/pages/inoro.html
@@ -59,3 +59,5 @@
     Si quieres preguntarme cualquier cosa más no dudes en escribirme. 
     Suelo responder los <em>e-mails</em>, sobre todo.
 </p>
+
+<!-- publication_datetime 20200918T0002 -->
