--- a/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
+++ b/public/pages/la-forma-mas-rapida-de-hacer-un-git-push.html
@@ -41,3 +41,5 @@ git push
     el nombre de usuario y la contraseña de <em>GitHub</em>, 
     <em>GitLab</em>, etc.
 </blockquote>
+
+<!-- publication_datetime 20200930T1240 -->
