--- a/public/pages/mi-software.html
+++ b/public/pages/mi-software.html
@@ -134,3 +134,5 @@
     usar Signal para hablar conmigo. De todas formas, actualmente, ya lo
     lo estoy intentando a paulatinamente.
 </p>
+
+<!-- publication_datetime 20210310T1332 -->
