--- a/public/pages/yojimbo-japon-inspira-western.html
+++ b/public/pages/yojimbo-japon-inspira-western.html
@@ -45,3 +45,5 @@
     tiene secuela: <strong>Sanjuro</strong> (1962). Ardo en deseos de verla 
     cuanto antes.
 </p>
+
+<!-- publication_datetime 20210724T2057 -->
