--- a/public/pages/cd-fuzzy-finder.html
+++ b/public/pages/cd-fuzzy-finder.html
@@ -86,3 +86,4 @@ cd "$(find * \( -path Library -o -path Applications -o -path opt \) -prune -o -p
 <blockquote>
     He de decir que aún estoy empezando a incorporar esta nueva idea a mi día a día por lo que puede que el comando y, como consecuencia, este articulo puede que sean actualizados a medida que pase el tiempo.
 </blockquote>
+<!-- publication_datetime 20220924T1659 -->
