--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -23,3 +23,8 @@
     <li>🌌 <a href="index.php?page=color.html&id=2">Modo oscuro</a> - Paleta personal con alto contraste.</li>
     <li>🌄 <a href="index.php?page=color.html&id=3">Auto</a> - Colores por defecto del navegador.</li>
 </ul>
+
+<p>
+    <strong>Actualmente la selección de color NO ESTÁ FUNCAIONANDO debido a un fallo con las cookies.</strong>
+</p>
+<!-- publication_datetime 20200918T0003 -->
