--- a/public/pages/descripcion.html
+++ b/public/pages/descripcion.html
@@ -39,3 +39,5 @@
     Intentaré cumplir esta visión en la medida de lo posible y no parar de 
     sentir curiosidad por cosas nuevas.
 </p>
+
+<!-- publication_datetime 20200918T1430 -->
