--- a/public/pages/emocionado-link-blog.html
+++ b/public/pages/emocionado-link-blog.html
@@ -32,3 +32,5 @@
 <blockquote>
     P.D. –Poco se comenta que la web de Jason F. McBrayer y esta tienen ambas la misma temática, y no me refiero a la temática tecnológica, sino a la ambientación <em>Lovecraftiana</em> 🐙 que envuelve a ambas–
 </blockquote>
+
+<!-- publication_datetime 20221112T2111 -->
