--- a/public/pages/gitlab-nginx.html
+++ b/public/pages/gitlab-nginx.html
@@ -278,3 +278,5 @@ sudo gitlab-ctl reconfigure
     <li><a href="https://about.gitlab.com/install/#ubuntu">Gitlab Official Linux package (recommended installation)</a></li>
     <li><a href="https://docs.gitlab.com/omnibus/settings/nginx.html">Gitlab NGINX settings</a></li>
 </ul>
+
+<!-- publication_datetime 20210307T1107 -->
