refactor: get_author_data_by_line() -> get_author_data()

--- a/public/pages/color.html
+++ b/public/pages/color.html
@@ -28,3 +28,4 @@
     <strong>Actualmente la selección de color NO ESTÁ FUNCAIONANDO debido a un fallo con las cookies.</strong>
 </p>
 <!-- publication_datetime 20200918T0003 -->
+<!-- author inoro -->
