--- a/public/pages/comandos-utiles-git.html
+++ b/public/pages/comandos-utiles-git.html
@@ -138,3 +138,4 @@ git branch -d &lt;branch_name&gt;
 git push origin --delete &lt;branch_name&gt;
 </pre>
 <!-- publication_datetime 20210413T2159 -->
+<!-- author inoro -->
