--- a/public/pages/expandir-ext4-dinamicamente.html
+++ b/public/pages/expandir-ext4-dinamicamente.html
@@ -40,3 +40,4 @@ sudo resize2fs /dev/sdb1
 <!-- https://gist.github.com/1noro/e9718c6f4b0d2b234f09a0567f375bb3 -->
 
 <!-- publication_datetime 20211114T2116 -->
+<!-- author inoro -->
