--- a/public/pages/configurando-nginx-para-esta-web.html
+++ b/public/pages/configurando-nginx-para-esta-web.html
@@ -329,3 +329,4 @@ systemctl reload nginx
     <li><a href="https://www.cyberciti.biz/faq/nginx-set-http-content-type-response-header-to-charset-utf8/">How do I enable charset HTTP-header in Nginx?</a></li>
 </ul>
 <!-- publication_datetime 20200919T0140 -->
+<!-- author inoro -->
