refactor: actualizando los tags de todas las páginas

--- a/factory/cambios-en-la-paleta-de-colores.html
+++ b/factory/cambios-en-la-paleta-de-colores.html
@@ -1,4 +1,4 @@
-<!-- 202009192110i -->
+<!-- publication_datetime 20200919T2110 -->
 <h1>Cambios en la paleta de colores</h1>
 
 <p>Resulta que...</p>
