--- a/factory/configurar-router-radio-4g-movistar-bridge.html
+++ b/factory/configurar-router-radio-4g-movistar-bridge.html
@@ -1,4 +1,4 @@
-<!-- 202106192156i -->
+<!-- publication_datetime 20210619T2156 -->
 <h1>Configurar un router radio 4G de Movistar en modo <em>bridge</em></h1>
 
 <p>
