--- a/factory/revisionismo.html
+++ b/factory/revisionismo.html
@@ -1,4 +1,4 @@
-<!-- 202107210000i -->
+<!-- publication_datetime 20210721T0000 -->
 <h1>Sobre el revisionismo en esta web</h1>
 
 <p>Sobre si es bueno editar/pulir artículos viejos y ya publicados.</p>
