feat: arreglando errores de phpstan

--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -9,3 +9,4 @@
     <img src="img/404.webp" alt="Yotsuba 404" class="half">
 </p>
 <!-- publication_datetime 20200918T0000 -->
+<!-- author anon -->
