refactor: arreglando enlaces perdidos

--- a/factory/ubiquiti-uf-nano-ont-movistar.html
+++ b/factory/ubiquiti-uf-nano-ont-movistar.html
@@ -13,7 +13,7 @@
             "@type": "ImageObject",
             "contentUrl": "https://record.rat.la/img/20211111/portada-recorte-750.jpg",
             "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-            "acquireLicensePage": "https://record.rat.la/index.php?page=faq.html"
+            "acquireLicensePage": "https://record.rat.la/faq"
         }
     </script>
 </p>
