--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -7,7 +7,7 @@ Preguntas que yo ya sé que vas a hacer.
 
 <p><a href="index.php">record.rat.la</a> es un blog/web personal auto-gestionado donde iré registrando mis proyectos y mis líos mentales.</p>
 
-<p>Para una respuesta más detallada visita la <a href="index.php?page=descripcion.html">descripción</a>.</p>
+<p>Para una respuesta más detallada visita la <a href="description">descripción</a>.</p>
 
 <!-- <h2>¿Porqué haces esto?</h2>
 
@@ -42,7 +42,7 @@ Preguntas que yo ya sé que vas a hacer.
             "@type": "ImageObject",
             "contentUrl": "https://record.rat.la/img/ratBbg.webp",
             "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-            "acquireLicensePage": "https://record.rat.la/index.php?page=faq.html"
+            "acquireLicensePage": "https://record.rat.la/faq"
         }
     </script>
 </p>
@@ -91,7 +91,7 @@ Preguntas que yo ya sé que vas a hacer.
 <h2>¿Qué software utilizas?</h2>
 
 <p>
-    Me he currado una lista bastante detallada sobre el software que utilizo habitualmente en <a href="index.php?page=mi-software.html">esta página</a>. Espero que responda a la pregunta.
+    Me he currado una lista bastante detallada sobre el software que utilizo habitualmente en <a href="/show?filename=mi-software.html">esta página</a>. Espero que responda a la pregunta.
 </p>
 
 <h2>¡Mi pregunta no aparece en la lista!</h2>
