feature: cambios en la forma de mostrar los artículos
tanto individual como en el home

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -62,7 +62,7 @@ Preguntas que yo ya sé que vas a hacer.
 <h2>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
 
 <p>
-    Todo el contenido multimedia que se muestra en esta página se encuentra bajo la licencia <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="nofollow">Creative Commons BY-NC-SA 4.0</a>. Con contenido multimedia me refiero todos los textos, imágenes, vídeos y audios que puedas ver publicados aquí.
+    Todo el contenido multimedia que se muestra en esta página se encuentra bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="nofollow">Creative Commons BY-SA 4.0</a>. Con contenido multimedia me refiero todos los textos, imágenes, vídeos y audios que puedas ver publicados aquí.
 </p>
 
 <p>
