fix: arreglando algunos flecos que se quedaron en el tintero con el cambio de urls

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -5,7 +5,7 @@ Preguntas que yo ya sé que vas a hacer.
 
 <h2>¿Qué es esto?</h2>
 
-<p><a href="index.php">record.rat.la</a> es un blog/web personal auto-gestionado donde iré registrando mis proyectos y mis líos mentales.</p>
+<p><a href="/">record.rat.la</a> es un blog/web personal auto-gestionado donde iré registrando mis proyectos y mis líos mentales.</p>
 
 <p>Para una respuesta más detallada visita la <a href="description">descripción</a>.</p>
 
