style: mejorada la fuente, los textos y las imágenes de la web

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -1,5 +1,5 @@
 
-<h1>FAQ</h1>
+<h1>Preguntas frecuentes</h1>
 
 Preguntas que yo ya sé que vas a hacer.
 
@@ -66,7 +66,7 @@ Preguntas que yo ya sé que vas a hacer.
 </p>
 
 <p>
-    Por otro lado el código fuente en PHP, HTML, CSS, JS y PYTHON que escriba para que la web funcione está publicado en <a href="https://github.com/1noro/record.rat.la">GitHub</a> bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" rel="nofollow">GNU GENERAL PUBLIC LICENSE Versión 3</a>.
+    Por otro lado el código fuente en PHP, HTML, CSS, JS y PYTHON que escriba para que la web funcione está publicado en <a href="https://github.com/1noro/record.rat.la">GitHub</a> bajo la licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" rel="nofollow">GNU General Public License Versión 3</a>.
 </p>
 
 <h2>¿Cómo puedo recibir actualizaciones sobre los nuevos contenidos de esta página?</h2>
